<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/LoginActivity_tv_sportImage"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:text="@string/fitness"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="cursive"
        android:background="@drawable/sport"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_activity_mb_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/LoginActivity_et_username"
                style="@style/LoginActivity_style_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/username"

                android:inputType="textPersonName"
                android:background="@drawable/login_activity_et_login"/>

            <EditText
                android:id="@+id/LoginActivity_et_password"
                style="@style/LoginActivity_style_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:background="@drawable/login_activity_et_login"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/LoginActivity_cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remember"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/LoginActivity_btn_login"
            style="@style/LoginActivity_style_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loginUser"
            android:background="@drawable/login_activity_btn_login"
            android:text="@string/Login"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/LoginActivity_btn_sign"
            style="@style/LoginActivity_style_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="SignUser"
            android:background="@drawable/login_activity_btn_login"
            android:text="@string/sign"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>